--- a/src/assets/i18n/br.json
+++ b/src/assets/i18n/br.json
@@ -11,7 +11,7 @@
 
   "about": {
     "title": "Sobre",
-    "description": "Olá, sou Gustavo Oliveira, tenho 22 anos. Nasci no Brasil e vivi no Japão por 6 anos, sempre acostumado a viajar e a restaurar efetivamente o equilíbrio. Sou um graduado dinâmico em Finanças, Marketing e Administração, ansioso para me aventurar no mundo profissional para aprimorar minhas habilidades. Ao longo desta jornada de vida, desenvolvi uma paixão fervorosa pelo desenvolvimento web, desejando aplicar o que aprendi. Sempre apaixonado pelo mundo da TI, com a capacidade de trabalhar bem tanto em equipe quanto de forma independente.",
+    "description": "Olá, sou Gustavo Oliveira, tenho 22 anos. Nasci no Brasil e vivi no Japão por 6 anos, sempre acostumado a viajar e a restaurar efetivamente o equilíbrio. Sou um graduado dinâmico em Finanças, Marketing e Administração. Ansioso para me aventurar no mundo profissional para aprimorar minhas habilidades. Ao longo desta jornada de vida, desenvolvi uma paixão fervorosa pelo desenvolvimento web, desejando aplicar o que aprendi. Sempre apaixonado pelo mundo da TI com a capacidade de trabalhar bem tanto em equipe quanto de forma independente.",
     "icon": "Habilidades"
   },
 
