--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -11,7 +11,7 @@
 
   "about": {
     "title": "About",
-    "description": "Hello, I'm Gustavo Oliveira, 22 years old. I was born in Brazil and lived in Japan for 6 years, always accustomed to traveling and effectively restoring balance. A dynamic graduate in Finance, Marketing, and Administration, I am eager to venture into the professional world to enhance my skills. Throughout this life journey, I have developed a fervent passion for web development, wishing to apply what I have learned. Always passionate about the world of IT, with the ability to work well both in a team and independently.",
+    "description": "Hello, I'm Gustavo Oliveira, 22 years old. I was born in Brazil and i lived in Japan for 6 years, always accustomed to traveling and effectively restoring balance. A dynamic graduate in Finance, Marketing, and Administration. I am eager to venture into the professional world to enhance my skills. Throughout this life journey, i have developed a fervent passion for web development, wishing to apply what I have learned. Always passionate about the world of IT with the ability to work well both in a team and independently.",
     "icon": "Skills"
   },
 
