--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -11,7 +11,7 @@
 
   "about": {
     "title": "CHI SONO",
-    "description": "Ciao, sono Gustavo Oliveira ho 22 anni. Sono nato in Brasile e vissuto per 6 anni in Giappone, da sempre abituato a viaggiare e a ripristinare efficacemente l'equilibrio. Dinamico diplomato in Amministrazione Finanza e Marketing, sono entusiasta di cimentarmi all’interno del mondo del lavoro per accrescere le mie competenze. Ho sviluppato in questo percorso di vita un'ardente passione per lo sviluppo web tanto da voler subito applicare quanto appreso, Da sempre appassionato al mondo dell’informatica, con capacità di lavorare bene sia in gruppo sia in autonomia.",
+    "description": "Ciao, sono Gustavo Oliveira ho 22 anni. Sono nato in Brasile e ho vissuto per 6 anni in Giappone, da sempre abituato a viaggiare e a ripristinare efficacemente l'equilibrio. Dinamico diplomato in Amministrazione Finanza e Marketing. Sono entusiasta di cimentarmi all’interno del mondo del lavoro per accrescere le mie competenze. Ho sviluppato in questo percorso di vita un'ardente passione per lo sviluppo web tanto da voler subito applicare quanto appreso, da sempre appassionato al mondo dell’informatica con capacità di lavorare bene sia in gruppo sia in autonomia.",
     "icon": "Competenze"
   },
 
