--- a/src/assets/i18n/br.json
+++ b/src/assets/i18n/br.json
@@ -51,5 +51,11 @@
     "data5": "Sex, 24 Fev 2023",
     "cardtitle5": "Benchmark Epicode",
     "testocard5": "Bem-vindo ao Benchmark da Epicode. Teste suas habilidades de programação com nossas perguntas desafiadoras. Aperfeiçoe suas habilidades e concorra ao título de melhor programador!"
+  },
+
+  "card6": {
+    "data6": "Seg, Fev 26 2024",
+    "cardtitle6": "Codeveloper",
+    "testocard6": "A Codeveloper é uma empresa dinâmica e inovadora que atua no setor de serviços de TI no Brasil. Especializada no desenvolvimento de software e consultoria tecnológica, a Codeveloper se destaca por sua capacidade de fornecer soluções personalizadas para as necessidades específicas de seus clientes."
   }
 }
