--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -51,5 +51,11 @@
     "data5": "Ven, Feb 24 2023",
     "cardtitle5": "Benchmark Epicode",
     "testocard5": "Benvenuto su Benchmark di Epicode. Metti alla prova le tue competenze di programmazione con le nostre domande sfidanti. Affina le tue abilità e competi per il titolo di miglior programmatore!"
+  },
+
+  "card6": {
+    "data6": "Lun, Feb 28 2024",
+    "cardtitle6": "Codeveloper",
+    "testocard6": "Codeveloper è un'azienda dinamica e innovativa che opera nel settore dei servizi IT in Brasile. Specializzata nello sviluppo software e nella consulenza tecnologica, Codeveloper si distingue per la sua capacità di fornire soluzioni su misura per le esigenze specifiche dei clienti."
   }
 }
